syntax = "proto3";

// export PATH="$PATH:$(go env GOPATH)/bin"
// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative grpc.proto

option go_package = "github.com/secondsightsolutions/binary-v5/main";

package main;

message AtlasRebate {
    int64  seq  = 1;
    int64  scid = 2;
    int64  rbid = 3;
    int64  indx = 4;
    string rxn  = 5;
    string hrxn = 6;
    string ndc  = 7;
    string spid = 8;
    string prid = 9;
    string dos  = 10;
    string stat = 11;
    string excl = 12;
    string errc = 13;
    string errm = 14;
    string col1 = 21;
    string col2 = 22;
    string col50= 70;
}
message AtlasRebateMeta {
    int64  seq  = 1;
    int64  scid = 2;
    string col1 = 11;
    string col2 = 12;
    string col50= 60;
}
message AtlasClaimUse {
    int64  seq  = 1;
    int64  scid = 2;
    string shrt = 3;
    string excl = 4;
}
message AtlasRebateClaim {
    int64  seq  = 1;
    int64  scid = 2;
    int64  rbid = 3;
    string shrt = 4;
}
message AtlasClaim {
    string shrt = 1;
    string i340 = 2;
    string ndc  = 3;
    string spid = 4;
    string prid = 5;
    string hrxn = 6;
    string hfrx = 7;
    string hdos = 8;
    string hdop = 9;
    int64  doc  = 10;
    int64  dos  = 11;
    int64  dop  = 12;
    string netw = 13;
    string prnm = 14;
    string chnm = 15;
    bool   elig = 16;
    bool   susp = 17;
    repeated string ihph = 18;
}

message TitanScrub {
    string manu = 1;
    int64  scid = 2;

}
message TitanRebate {
    int64  scid = 1;
    int64  rbid = 2;
    string stat = 3;
    string errc = 4;
    string errm = 5;
}

message Entity {
    string i340  = 1;
    int64  strt  = 2;
    int64  term  = 3;
    string state = 4;

    repeated Designation desigs = 10;
}

message Pharmacy {
    string i340 = 1;
    string phid = 2;
    string ncp  = 3;
    string npi  = 4;
    string dea  = 5;
    string chnm = 6;
    string state = 10;
    repeated string ncps = 7;
    repeated string npis = 8;
    repeated string deas = 9;
}

message NDC {
    string ndc  = 1;
    string name = 2;
    string netw = 3;
}

message SPI {
    string ncp = 1;
    string npi = 2;
    string dea = 3;
    string sto = 4;
    string nam = 5;
    string lbn = 6;
    string chn = 7;
    string cde = 8;   // NCPDP 340b status code
}

message Designation {
    string manu = 1;
    string i340 = 2;
    string netw = 3;
    string flag = 4;
    string phid = 5;
    bool   assg = 6;
    bool   term = 7;
    int64  xdat = 8;   // expired_at
    int64  dlat = 9;
    int64  xsat = 10;  // expires_at
    int64  crat = 12;  // created_at
    int64  cpat = 13;
    bool   excl = 14;
    string hin  = 15;

    map<string,string> xtra = 11;
}

message LDN {
    string manu = 1;
    string netw = 2;
    string phid = 3;
    bool   assg = 4;
    bool   term = 5;

    map<string,string> xtra = 10;
}

message ESP1PharmNDC {
    string  spid  = 1;
    string  ndc   = 2;
    int64   strt  = 3;
    int64   term  = 4;
}

message Eligibility {
    int64  id   = 1;     // id
    string i340   = 2;   // id_340b
    string phid   = 3;   // pharmacy_id
    string manu   = 4;   // manufacturer
    string netw   = 5;   // network
    int64  strt   = 6;   // start_at
    int64  term   = 7;   // end_at
}

message Req {
    string auth = 1;
    string ver  = 2;
    string manu = 3;
}
message Res {
}

message StartReq {
    string auth = 1;
    string manu = 2;
    string plcy = 3;
    string name = 4;
    string vers = 5;
    string desc = 6;
    string hash = 7;
    string host = 8;
    string type = 9;
    string hdrs = 10;
    string cmdl = 11;
}
message StartRes {
    int64   scid = 1;
}
message TitanMetrics {
    int32   rbt_total     = 1;
    int32   rbt_valid     = 2;
    int32   rbt_matched   = 3;
    int32   rbt_nomatch   = 4;
    int32   rbt_invalid   = 5;
    int32   rbt_passed    = 6;
    int32   rbt_failed    = 7;
    int32   clm_total     = 8;
    int32   clm_valid     = 9;
    int32   clm_matched   = 10;
    int32   clm_nomatch   = 11;
    int32   clm_invalid   = 12;
    int32   spi_exact     = 13;
    int32   spi_cross     = 14;
    int32   spi_stack     = 15;
    int32   spi_chain     = 16;
    int32   dos_equ_doc   = 17;
    int32   dos_bef_doc   = 18;
    int32   dos_aft_doc   = 19;
    int32   dos_equ_dof   = 20;
    int32   dos_bef_dof   = 21;
    int32   dos_aft_dof   = 22;
}

message ScrubRes {
    string text = 1;
}
message DoneReq {
}

service BinaryV5Srv {
    rpc Start(StartReq)                     returns (StartRes) {}
    rpc Scrub(stream Rebate)                returns (Metrics) {}
    rpc Done(DoneReq)                       returns (ScrubRes) {}
}

service BinaryV5Svc {
    rpc Ping(Req)                           returns (Res) {}
    rpc GetSPIs(Req)                        returns (stream SPI) {}
    rpc GetNDCs(Req)                        returns (stream NDC) {}
    rpc GetEntities(Req)                    returns (stream Entity) {}
    rpc GetPharmacies(Req)                  returns (stream Pharmacy) {}
    rpc GetESP1Pharms(Req)                  returns (stream ESP1PharmNDC) {}
    rpc GetClaims(Req)                      returns (stream Claim) {}
    rpc GetEligibilityLedger(Req)           returns (stream Eligibility) {}

    rpc Start(StartReq)                     returns (StartRes) {}
    rpc AddRebates(stream RebateRec)        returns (Res) {}
    rpc AddClaims(stream ClaimRec)          returns (Res) {}
    rpc UpdateClaims(stream ClaimUpdate)    returns (Res) {}
    rpc Done(Metrics)                       returns (Res) {}
}